# Visualization_assignments

./: pyproject.toml
data/: Eggs.csv
notebooks/: eggs.ipynb  titanic.ipynb
