[tool.poetry]
name = "assingments"
version = "0.1.0"
description = ""
authors = ["Joshua Ferguson <joshua.ferguson.273@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.16.14"
numpy = "^1.24.2"
altair = "^4.2.2"
plotly = "^5.13.1"
bokeh = "^3.1.0"
pyarrow = "^11.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"
nbformat = "^5.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
